Script to create sovereign genesis with hardhat

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ create_rollup_parameters.json
 docker/deploymentOutput
 
 .DS_Store
+
+tools/createSovereignGenesisWithHardhat/genesis-sovereign_hardhat.json
