WIP: Add feature unset claimMap

--- a/deployment/v2/create_rollup_parameters.json.example
+++ b/deployment/v2/create_rollup_parameters.json.example
@@ -19,6 +19,8 @@
         "bridgeManager": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
         "sovereignWETHAddress": "0x0000000000000000000000000000000000000000",
         "sovereignWETHAddressIsNotMintable": false,
-        "globalExitRootUpdater": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+        "globalExitRootUpdater": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
+        "globalExitRootRemover": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
+        "claimsUpdater": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     }
 }
