--- a/deployment/v2/create_rollup_parameters.json.example
+++ b/deployment/v2/create_rollup_parameters.json.example
@@ -20,7 +20,6 @@
         "sovereignWETHAddress": "0x0000000000000000000000000000000000000000",
         "sovereignWETHAddressIsNotMintable": false,
         "globalExitRootUpdater": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
-        "globalExitRootRemover": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
-        "claimsUpdater": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+        "globalExitRootRemover": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     }
 }
