krlos review remediations

--- a/tools/createNewRollup/create_new_rollup.json.example
+++ b/tools/createNewRollup/create_new_rollup.json.example
@@ -5,11 +5,13 @@
     "chainID": 1001,
     "rollupAdminAddress": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
     "consensusContractName": "PolygonZkEVMEtrog",
-    "gasTokenAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
+    "gasTokenAddress": "0x0000000000000000000000000000000000000000",
     "deployerPvtKey": "",
     "maxFeePerGas": "",
     "maxPriorityFeePerGas": "",
     "multiplierGas": "",
+    "timelockDelay": 0,
+    "timelockSalt": "",
     "rollupManagerAddress": "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0",
     "rollupTypeId": 1,
     "isVanillaClient": false,
