review tool change minDelay

--- a/tools/changeDelayTimelock/change_delay_timelock.json.example
+++ b/tools/changeDelayTimelock/change_delay_timelock.json.example
@@ -3,11 +3,5 @@
     "newMinDelay": 1800,
     "timeLockDelay": "",
     "predecessor": "",
-    "timelockSalt": "",
-    "deployerPvtKey": "",
-    "maxFeePerGas": "",
-    "maxPriorityFeePerGas": "",
-    "multiplierGas": "",
-    "sendSchedule": false,
-    "sendExecute": false
+    "timelockSalt": ""
 }
